# ls-analysis

./: .env  README.md  Taskfile.yml  main.py  pyproject.toml  requirements.txt
